--- a/gallery.css
+++ b/gallery.css
@@ -32,10 +32,23 @@
 
 .section-title {
     text-align: center;
-    font-size: 2.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: -1.5rem;
+    font-size: 3rem;
     color: #333;
     width: 100%;
+    z-index: 999;
+}
+
+.section-subtitle {
+    text-align: center;
+    font-weight: 100;
+    letter-spacing: 2rem;
+    font-size: 2.5rem;
+    margin-top: -3rem;
+    margin-bottom: 2rem;
+    color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    z-index: 998;
 }
 
 .gallery-grid {
